--- a/test.properties
+++ b/test.properties
@@ -1015,7 +1015,9 @@
 
     test.batch.max.subgroup.size=5
 
-    test.batch.names=unit-jdk8
+    test.batch.names=\
+    	unit-jdk8,\
+    	test-upgrade-schema-mysql56-jdk8
 
     test.batch.names[subrepository-validation]=\
         subrepository-compile-jdk8,\
@@ -1135,6 +1137,7 @@
     test.batch.size[tck-jdk8]=1
     test.batch.size[unit-jdk8]=1
     test.batch.size[wsdd-builder-jdk8]=1
+    test.batch.size[test-upgrade-schema-mysql56-jdk8]=1
 
     #
     # Gauntlet
