--- a/test.properties
+++ b/test.properties
@@ -1017,7 +1017,8 @@
 
     test.batch.names=\
     	unit-jdk8,\
-    	test-upgrade-schema-mysql56-jdk8
+    	test-upgrade-schema-mysql56-jdk8,\
+        test-upgrade-schema-mysql50-jdk8
 
     test.batch.names[subrepository-validation]=\
         subrepository-compile-jdk8,\
@@ -1138,6 +1139,7 @@
     test.batch.size[unit-jdk8]=1
     test.batch.size[wsdd-builder-jdk8]=1
     test.batch.size[test-upgrade-schema-mysql56-jdk8]=1
+    test.batch.size[test-upgrade-schema-mysql50-jdk8]=1
 
     #
     # Gauntlet
