--- a/test.properties
+++ b/test.properties
@@ -1024,8 +1024,10 @@
 
     test.batch.names=\
     	unit-jdk8,\
-    	test-upgrade-schema-mysql56-jdk8,\
-        test-upgrade-schema-mysql55-jdk8
+        test-upgrade-schema-hypersonic20-jdk8,\
+        test-upgrade-schema-mysql55-jdk8,\
+        test-upgrade-schema-mysql56-jdk8,\
+        test-upgrade-schema-postgresql94-jdk8
 
     test.batch.names[subrepository-validation]=\
         subrepository-compile-jdk8,\
@@ -1146,8 +1148,10 @@
     test.batch.size[tck-jdk8]=1
     test.batch.size[unit-jdk8]=1
     test.batch.size[wsdd-builder-jdk8]=1
+    test.batch.size[test-upgrade-schema-hypersonic20-jdk8]=1
     test.batch.size[test-upgrade-schema-mysql56-jdk8]=1
     test.batch.size[test-upgrade-schema-mysql55-jdk8]=1
+    test.batch.size[test-upgrade-schema-postgresql94-jdk8]=1
 
     #
     # Gauntlet
