--- a/test.properties
+++ b/test.properties
@@ -1025,6 +1025,7 @@
     test.batch.names=\
     	unit-jdk8,\
         test-upgrade-schema-hypersonic20-jdk8,\
+        test-upgrade-schema-mariadb100-jdk8,\
         test-upgrade-schema-mysql55-jdk8,\
         test-upgrade-schema-mysql56-jdk8,\
         test-upgrade-schema-postgresql94-jdk8
@@ -1149,6 +1150,7 @@
     test.batch.size[unit-jdk8]=1
     test.batch.size[wsdd-builder-jdk8]=1
     test.batch.size[test-upgrade-schema-hypersonic20-jdk8]=1
+    test.batch.size[test-upgrade-schema-mariadb100-jdk8]=1
     test.batch.size[test-upgrade-schema-mysql56-jdk8]=1
     test.batch.size[test-upgrade-schema-mysql55-jdk8]=1
     test.batch.size[test-upgrade-schema-postgresql94-jdk8]=1
