redo copying directly from run-integration-test

--- a/test.properties
+++ b/test.properties
@@ -1022,7 +1022,13 @@
 
     test.batch.max.subgroup.size=5
 
-    test.batch.names=unit-jdk8
+    test.batch.names=\
+    	unit-jdk8,\
+        test-upgrade-schema-hypersonic20-jdk8,\
+        test-upgrade-schema-mariadb100-jdk8,\
+        test-upgrade-schema-mysql55-jdk8,\
+        test-upgrade-schema-mysql56-jdk8,\
+        test-upgrade-schema-postgresql94-jdk8
 
     test.batch.names[subrepository-validation]=\
         subrepository-compile-jdk8,\
@@ -1143,6 +1149,11 @@
     test.batch.size[tck-jdk8]=1
     test.batch.size[unit-jdk8]=1
     test.batch.size[wsdd-builder-jdk8]=1
+    test.batch.size[test-upgrade-schema-hypersonic20-jdk8]=1
+    test.batch.size[test-upgrade-schema-mariadb100-jdk8]=1
+    test.batch.size[test-upgrade-schema-mysql56-jdk8]=1
+    test.batch.size[test-upgrade-schema-mysql55-jdk8]=1
+    test.batch.size[test-upgrade-schema-postgresql94-jdk8]=1
 
     #
     # Gauntlet
