--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -273,4 +273,17 @@ javac.classpath=\
 	lib/portal/xstream.jar:\
 	lib/portal/xuggle-xuggler-noarch.jar:\
 	lib/portal/xz.jar:\
-	lib/portal/yui-compressor.jar
+	lib/portal/yui-compressor.jar:\
+	tmp/lib-pre/com.liferay.portal.impl.blogs.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.impl.document.library.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.impl.message.boards.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.impl.trash.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.blogs.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.concurrent.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.document.library.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.memory.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.message.boards.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.nio.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.util.compat.jar:\
+	tmp/lib-pre/com.liferay.util.java.compat.jar:\
+	tmp/lib-pre/com.liferay.util.taglib.compat.jar
