LPS-79753 Update IDE files

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -281,6 +281,7 @@ javac.classpath=\
 	tmp/lib-pre/com.liferay.portal.kernel.blogs.compat.jar:\
 	tmp/lib-pre/com.liferay.portal.kernel.concurrent.compat.jar:\
 	tmp/lib-pre/com.liferay.portal.kernel.document.library.compat.jar:\
+	tmp/lib-pre/com.liferay.portal.kernel.io.compat.jar:\
 	tmp/lib-pre/com.liferay.portal.kernel.memory.compat.jar:\
 	tmp/lib-pre/com.liferay.portal.kernel.message.boards.compat.jar:\
 	tmp/lib-pre/com.liferay.portal.kernel.nio.compat.jar:\
