LPS-80332 Manual fixes

--- a/build.properties
+++ b/build.properties
@@ -84,11 +84,17 @@
     #
     build.include.dirs=
     #build.include.dirs=\
+    #    apps/calendar,\
     #    apps/collaboration,\
-    #    apps/forms-and-workflow,\
+    #    apps/dynamic-data-lists,\
+    #    apps/dynamic-data-mapping,\
     #    apps/foundation,\
     #    apps/ip-geocoder,\
     #    apps/marketplace,\
+    #    apps/polls,\
+    #    apps/portal-reports-engine,\
+    #    apps/portal-rules-engine,\
+    #    apps/portal-workflow,\
     #    apps/static,\
     #    apps/sync,\
     #    apps/web-experience,\
