--- a/test.properties
+++ b/test.properties
@@ -1292,6 +1292,8 @@
         ruby-sass-compiler-jdk8,\
         semantic-versioning-jdk8,\
         service-builder-jdk8,\
+        slim-osgi-state-exploded-test-jdk8,\
+        slim-osgi-state-lpkg-test-jdk8,\
         slim-profile-jdk8,\
         source-format-jdk8,\
         tck-jdk8,\
@@ -1421,6 +1423,8 @@
     test.batch.size[ruby-sass-compiler-jdk8]=1
     test.batch.size[semantic-versioning-jdk8]=1
     test.batch.size[service-builder-jdk8]=1
+    test.batch.size[slim-osgi-state-exploded-test-jdk8]=1
+    test.batch.size[slim-osgi-state-lpkg-test-jdk8]=1
     test.batch.size[slim-profile-jdk8]=1
     test.batch.size[source-format-current-branch-jdk8]=1
     test.batch.size[source-format-jdk8]=1
